<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_item_movie"
    card_view:cardCornerRadius="8dp"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:padding="8dp">
        <ImageView
            android:id="@+id/img_item_movie"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:contentDescription="@string/cd_image_movie"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent"/>
        <TextView
            android:id="@+id/tv_item_title_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_tvshow_here"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/img_item_movie"
            android:layout_marginStart="8dp"/>
        <TextView
            android:id="@+id/tv_item_desc_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_from_tvshow_here"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_toEndOf="@id/img_item_movie"
            android:layout_below="@id/tv_item_title_movie"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"/>
    </RelativeLayout>


</androidx.cardview.widget.CardView>